refactor(account): make working in memory account module
